Radius and diameter mixup for primitive spheres #84638

Closed
opened 2021-01-12 13:49:46 +01:00 by Per Jespersen · 9 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: Quadro P520/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 452.56

Blender Version
Broken: version: 2.90.1, branch: master, commit date: 2020-09-23 06:43, hash: 3e85bb34d0
Worked: (newest version of Blender that worked as expected)

Short description of error
When I create primitive spheres in python code in the console the radius argument works as radius if the scale vector is (1,1,1). But it works as diameter if the scale vector has any components different from 1.

Exact steps for others to reproduce the error

Start Blender.

In the console type:

bpy.ops.mesh.primitive_uv_sphere_add(radius = 5, scale=(1,1,1))
bpy.ops.mesh.primitive_ico_sphere_add(radius = 5, scale=(1,1,1))

This gives spheres of RADIUS 5.

Now try to type:

bpy.ops.mesh.primitive_uv_sphere_add(radius = 5, scale=(1,1,2))
bpy.ops.mesh.primitive_ico_sphere_add(radius = 5, scale=(1,1,1.01))

Now the spheres are created with DIAMETER 5

I haven't checked other primitives with radius (cylinder, torus, cone ect.)

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: Quadro [P520](https://archive.blender.org/developer/P520.txt)/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 452.56 **Blender Version** Broken: version: 2.90.1, branch: master, commit date: 2020-09-23 06:43, hash: `3e85bb34d0` Worked: (newest version of Blender that worked as expected) **Short description of error** When I create primitive spheres in python code in the console the radius argument works as radius if the scale vector is (1,1,1). But it works as diameter if the scale vector has any components different from 1. **Exact steps for others to reproduce the error** Start Blender. In the console type: bpy.ops.mesh.primitive_uv_sphere_add(radius = 5, scale=(1,1,1)) bpy.ops.mesh.primitive_ico_sphere_add(radius = 5, scale=(1,1,1)) This gives spheres of *RADIUS* 5. Now try to type: bpy.ops.mesh.primitive_uv_sphere_add(radius = 5, scale=(1,1,2)) bpy.ops.mesh.primitive_ico_sphere_add(radius = 5, scale=(1,1,1.01)) Now the spheres are created with *DIAMETER* 5 I haven't checked other primitives with radius (cylinder, torus, cone ect.)
Author

Added subscriber: @DrDress

Added subscriber: @DrDress
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm this issue on 2.92.0 Alpha, branch: master, commit date: 2021-01-12 03:19, hash: 55059af01d.

I can confirm this issue on 2.92.0 Alpha, branch: master, commit date: 2021-01-12 03:19, hash: `55059af01d`.
Falk David self-assigned this 2021-01-12 14:55:47 +01:00
Member

I think I know what the issue here is.

I think I know what the issue here is.

Added subscriber: @mont29

Added subscriber: @mont29

Tagging as known issue since we probably want to wait for next major release (3.0) to fix it, as it will break current behavior of the API.

Tagging as known issue since we probably want to wait for next major release (3.0) to fix it, as it will break current behavior of the API.

This issue was referenced by 9b2b32a333

This issue was referenced by 9b2b32a3338d873529a9b2c402feae4e9d25afdf

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 3.0 milestone 2023-02-08 15:59:28 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84638
No description provided.